Remove the let's get a beer line

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           </section>
           <section>
             <img src='./img/brett.png'>
-            <h2>My name is Brett.<br/>Let's get a beer!</h2>
+            <h2>My name is Brett.</h2>
           </section>
           <section>
             <h2>Thank you!</h2>
