Work on expanding the Ember.js & Ember CLI content

--- a/index.html
+++ b/index.html
@@ -80,13 +80,68 @@
           </section>
 
           <section>
+            <h2>The separation of concerns within Ember.js makes it easy to know what goes where.</h2>
+          </section>
+
+          <section>
             <h2>It is comparable to Anguar.js and Backbone.js.</h2>
           </section>
 
           <section>
             <h2>It is developed by a core team and hundreds of contributors.</h2>
           </section>
+
+          <section>
+            <h2>Similar to Ruby on Rails, it is all about convention over configuration.</h2>
+          </section>
         </section> <!-- About Ember.js -->
+
+        <section> <!-- About Ember CLI -->
+          <section>
+            <h2>But WTF is Ember CLI?</h2>
+          </section>
+
+          <section>
+            <h2>Ember CLI is a companion tool for Ember.js.</h2>
+          </section>
+
+          <section>
+            <h2>It accomplishes the following:</h2>
+          </section>
+
+          <section>
+            <h3>Defines project structure for Ember.js applications</h3>
+          </section>
+
+          <section>
+            <h3>Uses Broccoli for the asset pipline</h3>
+          </section>
+
+          <section>
+            <h3>Supports ES6 modules by transpiling the JS</h3>
+            <h4>The future of JS, today!</h4>
+          </section>
+
+          <section>
+            <h3>Adds the <code>ember</code> command line tool</h3>
+            <h4><code>ember generate</code> - generate resources</h4>
+            <h4><code>ember new</code> - create a new project</h4>
+            <h4><code>ember server</code> - start a local dev server using Express.js</h4>
+          </section>
+
+          <section>
+            <h3>Makes testing easier with <code>ember test</code> and JSHint</h3>
+          </section>
+
+          <section>
+            <h3>Sets up Bower for managing dependencies</h3>
+          </section>
+        </section> <!-- About Ember CLI -->
+
+        <section> <!-- The Good, The Bad, and The Ugly -->
+          <section>
+          </section>
+        </section> <!-- The Good, The Bad, and The Ugly -->
 
         <section> <!-- Wrapping up -->
           <section>
