Expand upon the good/bad/ugly section

--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
           <section>
             <h2>Similar to Ruby on Rails, it is all about convention over configuration.</h2>
           </section>
+
+          <section>
+            <h2>Ember Data is a library for Ember.js that makes managing data simpler and consistent.</h2>
+          </section>
         </section> <!-- About Ember.js -->
 
         <section> <!-- About Ember CLI -->
@@ -140,6 +144,39 @@
 
         <section> <!-- The Good, The Bad, and The Ugly -->
           <section>
+            <h2>Ember is good for building UI-heavy applications.</h2>
+          </section>
+
+          <section>
+            <h2>Ember is good for those who value consistent structure.</h2>
+          </section>
+
+          <section>
+            <h2>Ember CLI makes working with Ember.js a joy. 🌞</h2>
+          </section>
+
+          <section>
+            <h2>Ember.js has a learning curve that is fairly steep.</h2>
+          </section>
+
+          <section>
+            <h2>Ember.js and Ember CLI are young.</h2>
+          </section>
+
+          <section>
+            <h2>Resources can be scarce. Information can be stale.</h2>
+          </section>
+
+          <section>
+            <h2>Having a separate front-end and back-end application adds complexity to the app's environments.</h2>
+          </section>
+
+          <section>
+            <h2>Ember.js is not good for sprinkling into an application.</h2>
+          </section>
+
+          <section>
+            <h2>If you have a non-trivial web application focused on user interactions, Ember.js may be a solid fit.</h2>
           </section>
         </section> <!-- The Good, The Bad, and The Ugly -->
 
