Fix some typos and remove cruft

--- a/index.html
+++ b/index.html
@@ -54,10 +54,6 @@
           </section>
 
           <section>
-            <h2>I live in Burlington, Vermont.</h2>
-          </section>
-
-          <section>
             <h2>I work as a freelance web application developer.</h2>
           </section>
 
@@ -84,7 +80,7 @@
           </section>
 
           <section>
-            <h2>It is comparable to Anguar.js and Backbone.js.</h2>
+            <h2>It is comparable to Angular.js and Backbone.js.</h2>
           </section>
 
           <section>
@@ -118,7 +114,7 @@
           </section>
 
           <section>
-            <h3>Uses Broccoli for the asset pipline</h3>
+            <h3>Uses Broccoli for the asset pipeline</h3>
           </section>
 
           <section>
