Always use Ember.js instead of Ember for the lib

--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
 
         <section> <!-- The Good, The Bad, and The Ugly -->
           <section>
-            <h2>Ember is good for building UI-heavy applications.</h2>
+            <h2>Ember.js is good for building UI-heavy applications.</h2>
           </section>
 
           <section>
-            <h2>Ember is good for those who value consistent structure.</h2>
+            <h2>Ember.js is good for those who value consistent structure.</h2>
           </section>
 
           <section>
